--- a/config/medallas-juegos-panamericanos-junior-2025-stacked-horizontal.yml
+++ b/config/medallas-juegos-panamericanos-junior-2025-stacked-horizontal.yml
@@ -1,30 +1,145 @@
-# /config/medallas-juegos-panamericanos-junior-2025-stacked-horizontal.yml
+# Configuración para gráfico de medallas - Juegos Panamericanos Junior 2025
+# Configuración específica de la leyenda para este gráfico
+legend_config:
+  # POSICIONAMIENTO DE LA LEYENDA
+  loc: "lower right"      # Posición general: qué esquina/borde de la leyenda se ancla a las coordenadas de bbox_to_anchor
+  bbox_to_anchor: [0.98, 0.02]  # Coordenadas precisas [x, y] donde se ancla la leyenda (x=0.98→derecha, y=0.02→abajo)
+  
+  # FORMATO DE LA LEYENDA
+  ncol: 3                 # Número de columnas para organizar los elementos de la leyenda
+  fontsize: 22            # Tamaño de fuente para los elementos de la leyenda
+  title: "Medallas"       # Texto del título que aparece sobre la leyenda
+  title_fontsize: 24      # Tamaño de fuente para el título de la leyenda
+  title_fontweight: "bold"  # Peso de la fuente para el título de la leyendan que utiliza template stackedbar-horizontal-condatos.yml
+
+# Archivo de salida y datos
+outfile: "out/medallas-juegos_panamericanos_junior_2025-simple"
 template: "templates/stackedbar-horizontal-condatos.yml"
-outfile: "out/medallas-juegos_panamericanos_junior_2025-stacked-horizontal"
+style: "styles/minimal.mplstyle"   # Estilo minimalista moderno
+
+# Datos de entrada
 data:
-  csv: "data/medallas-juegos-panamericanos-junior-2025.csv"
-
-overrides:      # Calculado: 1.0 - margin_left - margin_right (1.0 - 0.22 - 0.12)
-  title:
-    text: "\n   Medallas por país - Juegos Panamericanos Junior Asunción 2025"
-    wrap: true         # Habilitar wrapping dentro del ancho definido
-  
-  subtitle:
-    text: "Total de preseas ganadas (oro, plata y bronce) en los Juegos Panamericanos Junior."
-    wrap: true         # Habilitar wrapping dentro del ancho definido
-  branding:
-    source: "Pagina oficial de los Juegos Panamericanos Junior Asunción 2025, https://www.asu2025.org.py/"
-    note: "Licencia CC BY-NC-SA 4.0"
-    date_auto: true
-    icons: ["assets/cc.png", "assets/by.png", "assets/nc.png"]
-    logo: "assets/logo_condatos.png"
-  
+  csv: data/medallas-juegos-panamericanos-junior-2025.csv
   category_col: "pais"
-  series_order: ["oro", "plata", "bronce"]
-  dpi: 300
 
-  colors:
-    oro: "#B6862C"
-    plata: "#7D7D7D"
-    bronce: "#8C5A2B"
-  
+# Configuración personalizada de márgenes para este gráfico en específico
+margins:
+  top: 0.15           # Margen superior reducido para acercar el gráfico al subtítulo
+  bottom: 0.15        # Margen inferior para dar espacio al footer
+  text_padding: 0.15  # Un poco más de espacio después del texto
+  min_left: 0.3      # Mínimo margen izquierdo
+
+# Configuración de series específica para este dataset
+series_order: ["oro", "plata", "bronce"]
+
+# Título y subtítulo específicos para este gráfico
+title: "Medallas por país - Juegos Panamericanos Junior Asunción 2025"
+subtitle: "Total de preseas ganadas (oro, plata y bronce) en los Juegos Panamericanos Junior 2025"
+
+# Configuración de espaciado específica para estos títulos
+title_spacing:
+  top_margin: 0.35       # 35% de espacio desde el borde superior (mantenemos igual)
+  bottom_margin: 0.25    # 25% entre título y subtítulo (aumentado)
+  subtitle_top_margin: 0.10  # 10% adicional para separar el subtítulo del título (aumentado)
+  subtitle_bottom_margin: 0.00  # 0% de espacio debajo del subtítulo (mantenemos igual)
+
+# Ordenar datos - invertir el orden para mostrar de menor a mayor
+invert_order: true   # Invertir el orden (de menor a mayor)
+
+# Sobrescribir tamaño de fuente del título y subtítulo para este gráfico
+title_config:
+  fontsize: 42            # Tamaño de fuente para el título (ajustado)
+  width: 0.98             # Ancho máximo como fracción del eje (ampliado al máximo)
+  padding_left: 0.01      # Padding izquierdo reducido
+  padding_right: 0.01     # Padding derecho reducido
+  word_wrap: true         # Habilitar ajuste de texto para títulos largos
+  ha: "center"            # Centrar horizontalmente
+  x: 0.4                  # Posición X central 
+
+subtitle_config:
+  fontsize: 28            # Tamaño de fuente para el subtítulo (aumentado)
+  width: 0.98             # Ancho máximo como fracción del eje (ampliado al máximo)
+  padding_left: 0.03      # Padding izquierdo reducido
+  padding_right: 0.03     # Padding derecho reducido
+  word_wrap: true         # Habilitar ajuste de texto para subtítulos largos
+  ha: "center"            # Centrar horizontalmente
+  x: 0.5                  # Posición X central
+
+# Configuración de autoajuste específica para este gráfico
+autosize:
+  height_per_row: 0.8     # Espacio entre filas
+  min_height: 18          # Aumentado para asegurar que el gráfico tenga suficiente altura
+  max_height: 35          # Aumentado para permitir más espacio total
+  add_height_ratio: 0.05  # Añadir 5% más de altura (reducido del 15% original)
+
+# Configuración de barras específica para este gráfico
+bar:
+  height: 1.0             # Aumentado para hacer las barras más anchas visualmente
+  linewidth: 0.5          # Grosor del borde
+  edgecolor: "#ffffff"    # Color blanco para los bordes
+  gap: 0.08               # Espacio entre barras (8% de la altura)
+
+# Colores personalizados para este gráfico - paleta para tema minimalista
+colors:
+  oro: "#F28E2B"          # Dorado minimalista
+  plata: "#4E79A7"        # Azul minimalista
+  bronce: "#E15759"       # Rojo-naranja minimalista
+
+# Configuración de etiquetas de totales específica para este gráfico
+total_labels:
+  x_offset: 8             # Offset personalizado
+  font_size: 12           # Tamaño de fuente personalizado
+
+# Configuración del eje Y específica para este gráfico
+yaxis:
+  show_ticks: false       # Ocultar los valores numéricos del eje Y
+  show_labels: true      # Ocultar las etiquetas de texto del eje Y
+  font:
+    family: "sans-serif"  # Familia de fuente específica
+    size: 18              # Tamaño reducido para nombres largos
+
+# (Configuración de la leyenda definida al principio del archivo)
+
+# Footer personalizado para este gráfico específico
+footer:
+  # Configuración específica del footer
+  config:
+    y_position: 0.05      # Posición vertical personalizada
+    show_frame: false     # Sin marco para este gráfico específico
+
+  # Texto de fuente personalizado para este gráfico
+  source: "Fuente: Web Comité Olímpico Panamericano, 2025"
+  source_config:
+    fontsize: 18          # Tamaño personalizado
+    x_position: 0.15
+    width: 0.30           # Ancho máximo personalizado
+
+  # Texto de nota/licencia personalizado
+  note: "Licencia CC BY-NC-SA 4.0"
+  note_config:
+    fontsize: 18          # Tamaño personalizado
+    x_position: 0.5
+
+  # Logo específico para este gráfico
+  logos:
+    - path: "assets/logo_condatos.png"
+      size_method: "fraction"
+      width_fraction: 0.10  # 10% del ancho de la figura
+      x_position: 0.85
+
+# Configuración de banderas específica para este gráfico
+flags:
+  enabled: true           # Activar el uso de banderas
+  position: "end"         # Posición de las banderas al final de la barra
+  zoom: 0.12              # Tamaño personalizado de las banderas
+  show_axis_labels: true  # Mostrar los nombres de los países en el eje Y
+
+# Configuración para ocultar el eje X
+xaxis:
+  show_ticks: false       # Ocultar los valores numéricos del eje X
+  show_labels: false      # Ocultar las etiquetas de texto del eje X
+  hide_axis: true         # Ocultar completamente la línea del eje X y todos los elementos
+  hide_spines: true       # Ocultar los bordes del eje X
+
+# Activar mensajes de depuración
+debug: true
