--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,105 @@
+__pycache__/
+*.py[cod]
+$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+venv/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# mypy
+.mypy_cache/
+.dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# VS Code
+.vscode/
+
+# MacOS
+.DS_Store
+
+# Linux
+*~
+
+# Logs
+*.log
+*.out
+*.err
 netlog.json
+
+# Data outputs
+out/
+
+# Ignore generated PDFs, PNGs, SVGs
+*.pdf
+*.png
+*.svg
+
+# Ignore secrets/configs (customize as needed)
+.env
+.env.*
+secrets.*
+
+# Ignore font cache
+*.ttf
+*.otf
+*.woff
+*.woff2
+
+# Ignore temporary files
+*.tmp
+*.bak
+*.swp
+*.swo
+
+# Ignore test artifacts
+*.pytest_cache/
+
+# Ignore assets cache
+assets/__pycache__/
+
+# Ignore compiled files in app/
+app/__pycache__/
+app/plots/__pycache__/
